[gd_scene load_steps=9 format=3 uid="uid://sd2agm2qnvok"]

[ext_resource type="Script" path="res://Data/WorldScript.gd" id="1_tc2t4"]
[ext_resource type="PackedScene" uid="uid://r3dwm0laxvoe" path="res://Data/GameFieldScene.tscn" id="2_0gnb1"]
[ext_resource type="PackedScene" uid="uid://be7n3b4wau8cm" path="res://Data/SwitchersScene.tscn" id="2_plrfd"]
[ext_resource type="PackedScene" uid="uid://s3il0nevmoy4" path="res://Data/WallScene.tscn" id="4_rk1p6"]
[ext_resource type="PackedScene" uid="uid://bps2dd6c16235" path="res://Data/CoinSpawnerScene.tscn" id="5_y4x1s"]

[sub_resource type="LabelSettings" id="LabelSettings_afgj4"]
font_size = 30
font_color = Color(0.0110876, 0.0110876, 0.0110876, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4y6r6"]
font_size = 30
font_color = Color(0.0142752, 0.0142752, 0.0142752, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ryvj7"]
font_size = 30

[node name="World" type="Node2D"]
script = ExtResource("1_tc2t4")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -100
offset_left = -44.0
offset_top = -20.0
offset_right = 1171.0
offset_bottom = 657.0
color = Color(0.54, 0.54, 0.405, 1)

[node name="GameField" parent="." instance=ExtResource("2_0gnb1")]

[node name="Wall" parent="." instance=ExtResource("4_rk1p6")]
position = Vector2(788, -3)

[node name="CoinSpawner" parent="." instance=ExtResource("5_y4x1s")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " Полученный урон:"
label_settings = SubResource("LabelSettings_afgj4")
vertical_alignment = 2

[node name="DamageCnt" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0
"
label_settings = SubResource("LabelSettings_4y6r6")
vertical_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = " Монет собрано: "
label_settings = SubResource("LabelSettings_afgj4")
vertical_alignment = 2

[node name="CoinsCnt" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "0
"
label_settings = SubResource("LabelSettings_4y6r6")
vertical_alignment = 2

[node name="EnemyLines" type="Node" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 646.0

[node name="Switchers" parent="Control" instance=ExtResource("2_plrfd")]
visible = false
layout_mode = 1
offset_top = -267.5
offset_bottom = 37.5

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 960.0
offset_top = 1.0
offset_right = 1149.0
offset_bottom = 52.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="TimerLbl" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "00:00 "
label_settings = SubResource("LabelSettings_ryvj7")

[node name="ConfigButton" type="Button" parent="HBoxContainer2"]
z_index = 5
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
text = "Настройки"

[node name="RestartBtn" type="Button" parent="HBoxContainer2"]
z_index = 5
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
text = "Заново"

[connection signal="max_value_changed" from="GameField" to="." method="_on_game_field_max_value_changed"]
[connection signal="need_restart" from="GameField" to="." method="_on_game_field_need_restart"]
[connection signal="wall_damaged" from="Wall" to="GameField" method="_on_wall_wall_damaged"]
[connection signal="coin_clicked_signal" from="CoinSpawner" to="." method="_on_coin_spawner_coin_clicked_signal"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="bullet_period_changed" from="Control/Switchers" to="." method="_on_switchers_bullet_period_changed"]
[connection signal="bullet_power_mult_changed" from="Control/Switchers" to="." method="_on_switchers_bullet_power_mult_changed"]
[connection signal="bullet_power_shift_changed" from="Control/Switchers" to="." method="_on_switchers_bullet_power_shift_changed"]
[connection signal="bullet_speed_changed" from="Control/Switchers" to="." method="_on_switchers_bullet_speed_changed"]
[connection signal="coin_chance_value_changed" from="Control/Switchers" to="." method="_on_switchers_coin_chance_value_changed"]
[connection signal="difficult_period_changed" from="Control/Switchers" to="." method="_on_switchers_difficult_period_changed"]
[connection signal="difficult_value_changed" from="Control/Switchers" to="." method="_on_switchers_difficult_value_changed"]
[connection signal="enemy_health_changed" from="Control/Switchers" to="." method="_on_switchers_enemy_health_changed"]
[connection signal="enemy_health_delta_changed" from="Control/Switchers" to="." method="_on_switchers_enemy_health_delta_changed"]
[connection signal="enemy_period_changed" from="Control/Switchers" to="." method="_on_switchers_enemy_period_changed"]
[connection signal="enemy_period_delta_changed" from="Control/Switchers" to="." method="_on_switchers_enemy_period_delta_changed"]
[connection signal="enemy_speed_changed" from="Control/Switchers" to="." method="_on_switchers_enemy_speed_changed"]
[connection signal="button_down" from="HBoxContainer2/ConfigButton" to="." method="_on_config_button_button_down"]
[connection signal="pressed" from="HBoxContainer2/RestartBtn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="HBoxContainer2/RestartBtn" to="GameField" method="_on_restart_btn_pressed"]
